<resources>
    <string name="app_name_2">roastly</string>


    <!-- Strings add by Juan -->
    <string name="two_girls_with_a_big_star">two girls with a big star</string>
    <string name="feedbacks_dispon_veis">Roasts Disponíveis</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="feedbacks_recebidos">Roasts Recebidos:</string>
    <string name="feedbacks_efetuados">Roasts Dados:</string>
    <string name="m_dia_pessoal">Média pessoal</string>
    <string name="iniciativa">Iniciativa:</string>
    <string name="colabora_o">Colaboração:</string>
    <string name="compromisso">Compromisso:</string>
    <string name="comunica_o">Comunicação:</string>
    <string name="editar_perfil_dashboard_profile">Editar perfil</string>
    <string name="dashboard">Dashboard</string>
    <string name="feedbacks_recebidos_dashboard">Roasts Recebidos:</string>
    <string name="feedbacks_efetuados_dashboard">Roasts Efetuados:</string>
    <string name="m_dia_pessoal_dashboard">Média pessoal</string>
    <string name="iniciativa_dashboard">Iniciativa:</string>
    <string name="colabora_o_dashboard">Colaboração:</string>
    <string name="compromisso_dashboard">Compromisso:</string>
    <string name="comunica_o_dashboard">Comunicação:</string>
    <string name="name_surname">Name Surname</string>


    <!-- Strings add by Danny -->

    <!-- LOGIN -->
    <string name="app_name">Roast.ly</string>
    <string name="small_logo_description">Logo Small Roast.ly</string>
    <string name="titulo_boas_vindas">Boas-vindas!</string>
    <string name="texto_login">Faz já login para poderes dar ou receber Roasts</string>
    <string name="email_hint">Digita o email</string>
    <string name="password_hint">Digita a password</string>
    <string name="esqueceu_password">Esqueceste-te da password?</string>
    <string name="login_button_text">Login</string>

    <!-- REGISTAR -->

    <string name="create_account_text">Ainda não estás registado? Cria conta.</string>
    <string name="create_account_title">Criar nova conta</string>
    <string name="create_account_nome_hint">Nome</string>
    <string name="create_account_ultimo_nome_hint">Apelido</string>
    <string name="create_account_email_hint">Digita o email</string>
    <string name="create_account_password_hint">Password</string>
    <string name="create_account_confirm_password_hint">Confirma a password</string>
    <string name="create_account_cargo_hint">Cargo</string>
    <string name="create_account_button_text">Registar</string>

    <string name="password">Password</string>
    <string name="confirme_a_password">Confirme a password</string>
    <string name="salvar">Salvar</string>
    <string name="small_logo">Small Logo</string>
    <string name="editar_perfil_1">Editar perfil</string>
    <string name="alterar_a_password">Alterar a password</string>
    <string name="confirma_a_nova_password">Confirma a nova password</string>
    <string name="alterar_cargo">Alterar cargo</string>
    <string name="icon_camera">icon camera</string>
    <string name="user_photo">User Photo</string>

    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="small_logo_">Small Logo</string>
    <string name="nome">Nome</string>
    <string name="digita_o_email">Digita o email</string>
    <string name="password_">Password</string>
    <string name="confirme_a_password_">Confirma a password</string>
    <string name="cargo">Cargo</string>
    <string name="registar">Registar</string>
    <string name="apelido">Apelido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_perfil_">Editar perfil</string>
    <string name="user_photo_">User Photo</string>
    <string name="user_photo__">User Photo</string>
    <string name="joana">Joana</string>
    <string name="formadora">Formadora</string>
    <string name="feedback_received_icon">Feedback received icon</string>
    <string name="feedback_given_icon">Feedback given icon</string>
    <string name="stars_icon">stars icon</string>
    <string name="stars_icon_">stars icon</string>
    <string name="stars_icon__">stars icon</string>
    <string name="stars_icon___">stars icon</string>

    <string name="capacidade">Comunicação:</string>
    <string name="editar">Editar</string>
    <string name="cargo_">Cargo</string>
    <string name="editar_">Editar</string>
    <string name="password__">Password</string>
    <string name="alterar_password">Alterar password</string>
    <string name="nova_password">Nova password</string>
    <string name="confirma_a_nova_password_">Confirma a nova password</string>
    <string name="salvar_altera_es">Salvar alterações</string>
    <string name="login">Login</string>
    <string name="not_registered_yet_create_account">Not registered yet? Create Account</string>
    <string name="icon_menu">icon</string>
    <string name="user_photo___">User Photo</string>
    <string name="dashboard_">Dashboard</string>
    <string name="add">Add</string>
    <string name="ranking">Ranking</string>
    <string name="feed">Feed</string>
    <string name="small_logo__">Small Logo</string>
    <string name="submeter">Submeter</string>
    <string name="adicionar_coment_rio">Adicionar comentário</string>
    <string name="profile_photo_content_desc" />
    <string name="name">Name</string>
    <string name="deu_feedback_a">deu Roast a</string>
    <string name="name_">Name</string>
    <string name="hoje_s_14h">Hoje às 14h</string>
    <string name="avalia_es_de">Avaliação de</string>
    <string name="name__">Name</string>
    <string name="para">para</string>
    <string name="name___">Name</string>
    <string name="iniciativa_">Iniciativa</string>
    <string name="conhecimento">Conhecimento</string>
    <string name="colabora_o_">Colaboração</string>
    <string name="responsabilidade">Responsabilidade</string>
    <string name="responsabilidade_">Responsabilidade</string>
    <string name="conhecimento_">Conhecimento</string>
    <string name="iniciativa__">Iniciativa</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_imperdiet_nulla_et_ullamcorper_dignissim_nullam_id_dolor_quis_velit_fringilla_venenatis_integer_vitae_metus_ac_felis_varius_posuere">Teste.</string>
    <string name="destaques_do_m_s">Destaques do mês</string>
    <string name="menu_icon">menu icon</string>
    <string name="name____">Name</string>
    <string name="initiative_icon" />
    <string name="collaboration_icon" />
    <string name="responsibility_icon" />
    <string name="responsabilidade__">Responsabilidade</string>
    <string name="communication_icon" />
    <string name="five_star_icon" />
    <string name="destaque_em_todas_as_categorias">Destaque em todas as categorias</string>
    <string name="name_____">Name</string>
    <string name="two_bullets_icon" />
    <string name="feedbacks_efetuados_">Roasts Efetuados</string>
    <string name="feedbacks_recebidos_">Roasts Recebidos</string>
    <string name="feedbacks_realizados">Roasts Realizados</string>
    <string name="star_icon">Star icon</string>
    <string name="esqueceste_a_password">Esqueceste a password?</string>
    <string name="enviaremos_um_email_com_instru_es_para_que_possas_criar_uma_nova">Enviaremos um email com instruções para que possas criar uma nova.</string>
    <string name="recuperar_password">Recuperar password</string>
    <string name="salvar_altera_es_">Salvar alterações</string>
    <string name="submeter_">Submeter</string>
    <string name="icon_back">icon back</string>
    <string name="comunica_o_">Comunicação</string>
    <string name="comunica_o__">Responsabilidade</string>
    <string name="icon_under_bar">icon_under_bar</string>
    <string name="profile">Profile</string>
    <string name="feed_">Feed</string>
    <string name="home">Home</string>
    <string name="small_logo___">Small Logo</string>
    <string name="add_">Add</string>
    <string name="ranking_">Ranking</string>
    <string name="m_dia_pessoal_">Média pessoal</string>
    <string name="user_photo_popup">Foto utilizador</string>
    <string name="congratulations">Parabéns ao nosso roasted do mês!</string>
    <string name="close">Fechar</string>
</resources>