<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_image">

    <!-- icon back -->
    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="88dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_back"
        android:scaleType="centerInside"
        app:layout_constraintHorizontal_bias="0"
        android:src="@drawable/icon_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoSmall"
        android:layout_width="88dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/small_logo_description"
        android:scaleType="centerInside"
        android:src="@drawable/logo_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout_forgot_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="372dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Title -->
        <TextView
            android:id="@+id/titleForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/league_spartan_medium"
            android:text="@string/esqueceste_a_password"
            android:textColor="#CC0676"
            android:textSize="47sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Text -->
        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/league_spartan_medium"
            android:lineSpacingExtra="10dp"
            android:text="@string/enviaremos_um_email_com_instru_es_para_que_possas_criar_uma_nova"
            android:textAlignment="textStart"
            android:textColor="#25183E"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>

    <!-- Email Input Field -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/rounded_input_background"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_forgot_password" />
    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_with_shadow"
        android:fontFamily="@font/league_spartan_medium"
        android:paddingBottom="5dp"
        android:text="@string/recuperar_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorLink="#5E48ED53"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"/>
</androidx.constraintlayout.widget.ConstraintLayout>
