<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_historic_given"
        android:layout_width="330dp"
        android:layout_height="110dp"
        android:layout_margin="12dp"
        android:background="@android:color/white"
        app:cardCornerRadius="80dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45">

        <ImageView
            android:id="@+id/profile_image_given"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/profile_photo_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_default_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/feed_name_given"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_medium"
                android:text="@string/name"

                android:textColor="#25183E"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/feed_day_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_medium"
                android:text="@string/hoje_s_14h"
                android:textColor="#005A87"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/historic_given_feedback_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="260dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/initiative_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_historic_given_feedback"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>